# ---meije-carto

./: .gitignore  CMakeLists.txt  Doxyfile  common.pri  config.h.in  generate-makefile.sh  qtcarto.pro  remove-makefile.sh  set-plugin-path.sh
imports/: CMakeLists.txt  imports.pro
imports/QtCarto/: CMakeLists.txt  QtCarto.pro  declarative_map_item.cpp  declarative_map_item.h  geo_coordinate_animation.cpp  geo_coordinate_animation.h  location_circle_material_shader.cpp  map_gesture_area.cpp  map_gesture_area.h  plugin_data.cpp  plugin_data.h  qmldir  qtcarto.cpp
mapviewer/: CMakeLists.txt  MapComponent.qml  icons  main.cpp  mapviewer.pro  mapviewer.qml  mapviewer.qrc
mapviewer/pages/: Layers.qml  MapComponent.qml  Projections.qml  main.qml
src/: CMakeLists.txt  config.cpp  config.h  earth.h  enum_flag.h  geo_coordinate.cpp  geo_coordinate.h  qc_math.h  qtcarto.h  qtcarto.pro  qtcarto_global.h  src.pri  src.pro
src/cache/: cache3q.h  cache3q.hxx  file_tile_cache.cpp  file_tile_cache.h  offline_cache.cpp  offline_cache.h  offline_cache_database.cpp  offline_cache_database.h  tile_image.h  tile_loader.cpp
src/configuration/: configuration.cpp  configuration.h
src/coordinate/: debug_tools.cpp  debug_tools.h  geo_coordinate.cpp  geo_coordinate.h  laea.h  mercator.cpp  mercator.h  projection.cpp  projection.h  projection.hxx  sexagesimal_angle.cpp  sexagesimal_angle.h  wgs84.cpp  wgs84.h
src/data_structure/: pooled_string.cpp  pooled_string.h  simd.cpp  simd.h  simd.hxx
src/database/: database.cpp  database.h
src/geo_data_format/: gpx.cpp  gpx.h  route.cpp  route.h  waypoint.cpp  waypoint.h  wkb.cpp  wkb.h  xml_reader.cpp  xml_reader.h
src/geometry/: line.h  path.cpp  path.h  path.hxx  polygon.cpp  polygon.h  polygon_seidler_triangulation.cpp  segment.h  segment.hxx  vector.cpp  vector.h  vector.hxx
src/map/: cache3q.h  cache3q.hxx  decorated_path.cpp  decorated_path.h  earth.h  file_tile_cache.cpp  file_tile_cache.h  geo_coordinate.cpp  geo_coordinate.h  geoportail_license.cpp  geoportail_wmts_reply.cpp  geoportail_wmts_reply.h  geoportail_wmts_tile_fetcher.cpp  geoportail_wmts_tile_fetcher.h  location_circle_data.cpp  location_circle_data.h  location_circle_material_shader.cpp  location_circle_material_shader.h  map_event_router.cpp  map_event_router.h  map_path_editor.cpp  map_path_editor.h  map_scene.cpp  map_scene.h  map_view.cpp  map_view.h  mosaic_painter.cpp  mosaic_painter.h  offline_cache.h  path_property.cpp  path_property.h  qcache3q.h  qcache3q.hxx  tile_image.cpp  tile_image.h  tile_loader.h  tile_matrix_index.cpp  tile_matrix_set.cpp  tile_matrix_set.h  tile_spec.cpp  (+13 more)
src/map/cache/: file_tile_cache.h  offline_cache.h  tile_image.cpp  tile_image.h
src/map/geoportail/: geoportail_license.cpp  geoportail_license.h  geoportail_plugin.cpp  (+4 more)
src/math/: interval.cpp  interval.h  interval.hxx  line.cpp  line.h  path.cpp  path.h  polygon.cpp  polygon.h  qc_math.cpp  qc_math.h  rational.cpp  rational.h  segment.h  segment.hxx  vector.cpp  vector.h
src/openstreetmap/: CMakeLists.txt  fileformat.proto  osm.cpp  osm.h  osm_database.cpp  osm_database.h  osm_pbf.cpp  osm_pbf.h  osmformat.proto
src/rrd/: rrd.cpp  rrd.h
src/scene/: grid_node.cpp  grid_node.h  location_circle_material_shader.cpp  location_circle_material_shader.h  location_circle_node.cpp  location_circle_node.h  map_layer_scene.cpp  map_scene.cpp  map_scene.h  map_scene_private.h  path_material_shader.cpp  path_material_shader.h  path_node.cpp  path_node.h  point_material_shader.cpp  point_material_shader.h
src/tools/: debug_data.cpp  debug_data.h  logger.cpp  logger.h  platform.cpp  platform.h
src/wmts/: elevation_reply.cpp  elevation_reply.h  elevation_service_reply.cpp  elevation_service_reply.h  location_service_query.cpp  location_service_query.h  location_service_reply.cpp  location_service_reply.h  network_reply.cpp  network_reply.h  plugin_wmts_reply.cpp  plugin_wmts_reply.h  plugin_wmts_tile_fetcher.cpp  plugin_wmts_tile_fetcher.h  tile_matrix_index.cpp  tile_matrix_index.h  tile_matrix_set.cpp  tile_matrix_set.h  tile_spec.cpp  tile_spec.h  wmts_manager.cpp  wmts_manager.h  wmts_network_reply.cpp  wmts_network_reply.h  wmts_network_tile_fetcher.cpp  wmts_network_tile_fetcher.h  wmts_plugin.cpp  wmts_plugin.h  wmts_plugin_manager.cpp  wmts_plugin_manager.h  wmts_reply.cpp  wmts_reply.h  wmts_request_manager.cpp  wmts_request_manager.h  wmts_tile_fetcher.cpp  wmts_tile_fetcher.h
test/: CMakeLists.txt  test.pro  test_geo_coordinate.cpp  test_geoportail_license.cpp  test_geoportail_wmts_tile_fetcher.cpp  test_interval.cpp  test_line.cpp  test_polygon.cpp  test_qcache3q.cpp  test_tile_matrix_set.cpp  test_vector.cpp  test_viewport.cpp  test_wmts_manager.cpp
test/cache/: CMakeLists.txt  test_offline_cache_database.cpp
test/coordinate/: CMakeLists.txt  test_geo_coordinate.cpp
test/data_structure/: CMakeLists.txt  test_pooled_string.cpp
test/geo_data_format/: CMakeLists.txt  test_gpx.cpp  test_wkb.cpp
test/geometry/: CMakeLists.txt  test_line.cpp  test_path.cpp  test_polygon.cpp  test_triangulation.cpp  test_vector.cpp
test/imports/: CMakeLists.txt  test_geo_coordinate_animation.cpp
test/map/: CMakeLists.txt  test_cache3q.cpp  test_file_tile_cache.cpp  test_geo_coordinate.cpp  test_geoportail_license.cpp  test_geoportail_wmts_tile_fetcher.cpp  test_tile_matrix_set.cpp  test_viewport.cpp  test_wmts_manager.cpp  test_wmts_request_manager.cpp
test/math/: CMakeLists.txt  test_interval.cpp  test_path.cpp  test_vector.cpp
test/openstreetmap/: CMakeLists.txt  test_osm_database.cpp  test_osm_pbf.cpp
test/rrd/: CMakeLists.txt  test_rrd.cpp
test/triangulation_test/: CMakeLists.txt  polygon_seidler_triangulation.cpp  polygon_seidler_triangulation.h  test_triangulation.cpp
third-parties/: CMakeLists.txt  get-third-parties
third-parties/libspatialindex/: CMakeLists.txt  test.cpp
third-parties/proj4/: CMakeLists.txt  proj4_config.cmake  test.c
tools/: CMakeLists.txt  clean-tiles.py  decode-spatialite.py  make-tile-database.py  spatialite-test.cpp  tile-loader.cpp
(+83 files in other folders)
