# -*- CMake -*-

####################################################################################################
#
# Sub directories
#

INCLUDE_DIRECTORIES(src)

add_subdirectory(QtCarto)

####################################################################################################
#
# End
#
####################################################################################################
