# -*- CMake -*-

####################################################################################################
#
# Sub directories
#

add_subdirectory(coordinate)
add_subdirectory(math)
add_subdirectory(geometry)
add_subdirectory(map)
add_subdirectory(geo_data_format)
add_subdirectory(triangulation_test)

####################################################################################################
#
# End
#
####################################################################################################
