# -*- CMake -*-

####################################################################################################
#
# Sub directories
#

add_subdirectory(cache)
add_subdirectory(coordinate)
add_subdirectory(data_structure)
add_subdirectory(geo_data_format)
add_subdirectory(geometry)
add_subdirectory(imports)
add_subdirectory(map)
add_subdirectory(math)
add_subdirectory(openstreetmap)

####################################################################################################
#
# End
#
####################################################################################################
