# -*- CMake -*-

####################################################################################################

add_subdirectory(proj4)
add_subdirectory(libspatialindex)

####################################################################################################
#
# End
#
####################################################################################################
