# -*- CMake -*-

####################################################################################################
#
# Include directories
#

# include_directories(${CMAKE_CURRENT_SOURCE_DIR})

####################################################################################################
#
# Library
#

set(qtcarto_files
  qtcarto.cpp
)
add_library(qmlqtcartoplugin SHARED ${qtcarto_files})
target_link_libraries(qmlqtcartoplugin Qt5::Qml)

####################################################################################################
#
# End
#
####################################################################################################
